--- a/web.config
+++ b/web.config
@@ -1,6 +1,6 @@
 <configuration>
   <appSettings>
     <add key="pythonpath" value="%SystemDrive%\home\site\wwwroot" />
-    <add key="WSGI_HANDLER" value="firstinbattle.main.wsgi" />
+    <add key="WSGI_HANDLER" value="firstinbattle.main.wsgi_app" />
   </appSettings>
 </configuration>
