--- a/web.config
+++ b/web.config
@@ -1,6 +1,9 @@
 <configuration>
   <appSettings>
-    <add key="pythonpath" value="%SystemDrive%\home\site\wwwroot" />
-    <add key="WSGI_HANDLER" value="firstinbattle.main.wsgi_app" />
+    <add key="WSGI_ALT_VIRTUALENV_HANDLER" value="firstinbattle.main.wsgi_app" />
+    <add key="WSGI_ALT_VIRTUALENV_ACTIVATE_THIS" value="D:\home\site\wwwroot\env\Scripts\activate.ps1" />
+    <add key="WSGI_HANDLER" value="ptvs_virtualenv_proxy.get_venv_handler()" />
+    <add key="PYTHONPATH" value="D:\home\site\wwwroot" />
   </appSettings>
 </configuration>
+
