--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "firstinbattle",
   "version": "0.0.1",
   "dependencies": {
-    "bower": "0.6.x"
+    "bower": "1.6.x"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install"
+    "postinstall": "cd firstinbattle/app/ && bower install"
   }
 }
